assets/styles/main.css
body {
  background: gray;
}

h1, h2 {
  margin: 0;
}

h2 {
  font-size: 1.25em;
}

.console__outer-container {
  display: flex;
  flex-direction: column;
  width: 50%;
  margin: 25% auto 0;
  border: 4px solid #999326;
  box-sizing: border-box;
  min-width: 800px;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  box-shadow: 0px 0px 3px 1px #999326;
  font-family: sans-serif;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.hidden {
  display: none;
}

.console__section {
  display: flex;
}

#consoleTopSection,
#consoleMidSection,
#consoleBottomSection {
  color: #838208;
  text-transform: uppercase;
  background: #110D08;
}

#consoleTopSection {
  justify-content: space-between;
  border-bottom: 4px solid #999326;
}

#consoleMidSection {
  border-bottom: 4px solid #999326;
  justify-content: space-between;
}

#consoleMidSection .console__settings-container {
  flex-grow: 1;
}

.console__unit-title {
  flex-grow: 1;
  text-align: center;
  color: #838208;
  font-family: sans-serif;
  text-shadow: 0 0 3px #838208;
  font-size: 1.5em;
  align-self: center;
}

#consoleMidSection > div:nth-child(2) > div.settings-container__bottom-section {
  text-align: left;
  padding-left: 25%;
}

#consoleMidSection > div:nth-child(2) > div.settings-container__top-section {
  text-align: left;
  padding-left: 20%;
}

#firingBottomSection > div:nth-child(2) {
  font-size: 2em;
}

.console__unit-ID {
  font-family: sans-serif;
  font-size: 74px;
  color: #838208;
  text-shadow: 0 0 3px #838208;
}

.console__unit-border {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 64px;
  font-family: sans-serif;
  line-height: 74px;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border: 2px solid #838208;
}

.console__unit-ID-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-end;
}

.console__unit-ID-container:first-child {
  margin-left: 10px;
}

.console__unit-ID-container:last-child {
  margin-right: 10px;
}

.settings-container__top-section {
  text-align: center;
  padding: 5px;
  border-bottom: 2px solid #999326;
}

.settings-container__bottom-section {
  text-align: center;
  padding: 5px 0;
}

#consoleBottomSection .settings-container__bottom-section {
  padding-bottom: 40px;
}

#consoleMidSection .console__settings-container:first-child .settings-container__top-section h2,
#consoleMidSection .console__settings-container:last-child h2 {
  padding-right: 25%;
}

#consoleMidSection > div:not(:last-child), #consoleBottomSection > div:not(:last-child) {
  border-right: 3px double #838208;
}

#consoleBottomSection > div {
  flex-grow: 1;
}

#consoleMidSection, #consoleBottomSection {
  text-shadow: 0 0 3px #838208;
}

.settings-container__option--active, .settings-container__top-section--active {
  background: #838208;
  color: #110D08;
}

.bar-graph__inner-container {
  display: flex;
}

.bar-graph__measure-bar {
  width: 20px;
  height: 250px;
  border-right: 1px solid #838208;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
  align-items: flex-end;
}

.measure-bar__interval--long {
  border-bottom: 1px solid #838208;
  height: 0px;
  width: 75%;
}

.measure-bar__interval--mid {
  border-bottom: 1px solid #838208;
  height: 0px;
  width: 50%;
}

.measure-bar__interval--small {
  border-bottom: 1px solid #838208;
  width: 25%;
  height: 0px;
}

.bar-graph__status-bar {
  margin-right: -7px;
  width: 20px;
  height: 250px;
  border-top: 1px solid #838208;
  box-sizing: border-box;
  transform: rotate(180deg);
}

.status-bar__inner-bar {
  height: 10%;
  width: 75%;
  background: #838208;
  margin: 0 auto;
}

#settingsConfirmButton {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.firing-section__container:first-of-type {
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

#firingTopSection {
  justify-content: space-between;
  border-bottom: 4px solid #999326;
  text-transform: uppercase;
}

#firingTopSection,
#firingBottomSection {
  color: #838208;
  background: #110D08;
}

#firingBottomSection {
  justify-content: space-evenly;
}

#criticalWarning > h2,
#firingBottomSection > div:nth-child(1) > h2 {
  text-transform: uppercase;
}

#criticalWarning {
  box-sizing: border-box;
  height: 65px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.critical-warning__container--non-inverted {
  border: 10px solid #838208;
}

.critical-warning__content--non-inverted {
  color: #110D08;
  background: #838208;
  padding: 1px;
  margin: 10px;
}

.critical-warning-inverted {
  color: #838208;
  background: #110D08;
  padding: 1px;
  border: 10px solid #838208;
}

#firingBottomSection > div:nth-child(2) {
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

#firingBottomSection > div:nth-child(3) {
  justify-content: space-around;
}

.numeric-indicator__container {
  display: flex;
  align-items: center;
}

.numeric-indicator__header {
  padding: 10px 20px;
  border: solid 1px #838208;
}

.round-counter__arrow-right {
  width: 0;
  height: 0;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 20px solid #838208;
}

.firing-section__container {
  display: flex;
  text-transform: capitalize;
  color: #838208;
  flex: 1;
}

/*# sourceMappingURL=main.css.map */

